# attested-tls

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  flake.nix  readme.md
.github/workflows/: test.yml
crates/attestation/: Cargo.toml  README.md
crates/attestation-provider-server/: Cargo.toml  build.rs
crates/attestation-provider-server/src/: lib.rs  main.rs
crates/attestation/assets/: global-virtual-tpm-ca-03.pem  microsoft-rsa-devices-root-ca-2021.pem
crates/attestation/src/: dcap.rs  gcp.rs  lib.rs  measurements.rs  nitro.rs  session_exporter.rs
crates/attestation/src/azure/: ak_certificate.rs  mod.rs  nv_index.rs
crates/attestation/test-assets/: aws-nitro-1779281545803060420  aws-nitro-1779365257362730433  azure-ak-leaf-westus3.pem  azure-cloud-virtual-tpm-ca-2025.pem  azure-cloud-virtual-tpm-ca-24.pem  azure-collateral-with-ak-intermediates-1780922561.yaml  azure-collateral.json  azure-collateral.yaml  azure-collateral02.json  azure-collateral02.yaml  azure-tdx-1764662251380464271  azure-tdx-1764662251380464271.yaml  azure-tdx-with-ak-intermediates-1780922561.yaml  buildernet_measurements.json  dcap-quote-collateral-00.json  dcap-quote-collateral-00.yaml  gcp-known-firmware.json  gcp-tdx-1782809233226668671  gcp-tdx-collateral-1782809233226668671.yaml  gcp-tdx-firmware-1782809233226668671.yaml  refresh-buildernet-measurements-fixture.sh
crates/attestation/tests/: rustls_exporter.rs  session_exporter_api.rs  sgx_generator.rs  sgx_measurements.rs
crates/attested-tls/: Cargo.toml  readme.md
crates/attested-tls/src/: lib.rs
crates/attested-tls/tests/: nested_tls.rs
crates/mock-tdx/: Cargo.toml  README.md
crates/mock-tdx/assets/: mock-dcap-collateral.yaml  mock-pck-chain.pem  mock-pck-key.pem  mock-root-ca.der
crates/mock-tdx/src/: lib.rs  main.rs  mock_pcs.rs
crates/mock-tdx/test-assets/generated-dcap/: mock-dcap-collateral.yaml  mock-dcap-manifest.json  mock-pck-chain.pem  mock-pck.crl.der  mock-qe-identity.json  mock-root-ca-key.pem  mock-root-ca.crl.der  mock-root-ca.der  mock-root-ca.pem  mock-tcb-info.json  mock-tcb-signer-chain.pem
crates/nested-tls/: Cargo.toml  Makefile  readme.md
crates/nested-tls/benches/: performance.rs  throughput.rs
crates/nested-tls/src/: lib.rs  tests.rs
crates/nested-tls/src/client/: mod.rs
crates/nested-tls/src/client/actix/: mod.rs  tests.rs
crates/nested-tls/src/server/: mod.rs
crates/nested-tls/src/server/actix/: mod.rs  tests.rs
crates/pccs/: Cargo.toml  README.md
crates/pccs/examples/: intel_pcs.rs
crates/pccs/src/: fetch.rs  lib.rs  mock_pcs.rs
