[workspace]
resolver = "3"

members = [
    "crates/attested-tls",
    "crates/nested-tls",
    "crates/attestation",
    "crates/pccs",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
manual_let_else = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
unused_async = "warn"

[workspace.dependencies]
attestation = { path = "crates/attestation" }
rustls = { version = "0.23.37", default-features = false, features = ["brotli"] }
tokio = { version = "1.50.0", features = ["default"] }
tokio-rustls = { version = "0.26.4", default-features = false }
dcap-qvl = "0.4.0"
pccs = { path = "crates/pccs" }
