[workspace]
resolver = "3"

members = [
    "crates/attested-tls",
    "crates/nested-tls",
    "crates/attestation",
    "crates/pccs",
    "crates/mock-tdx",
    "crates/attestation-provider-server",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
manual_let_else = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
unused_async = "warn"

[workspace.dependencies]
attestation = { path = "crates/attestation" }
mock-tdx = { path = "crates/mock-tdx" }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rustls = { version = "0.23.37", default-features = false, features = ["brotli"] }
tokio = { version = "1.50.0", features = ["default"] }
tokio-rustls = { version = "0.26.4", default-features = false }
dcap-qvl = "0.5.2"
pccs = { path = "crates/pccs" }
