[package]
name = "attestation"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Attestation generation and verification, and measurement policy handling"
repository = "https://github.com/flashbots/attested-tls"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
pccs = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-rustls = { workspace = true, default-features = false }
x509-parser = "0.18.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
configfs-tsm = "0.0.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
dcap-qvl = { workspace = true }
hex = "0.4.3"
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"
base64 = "0.22.1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls-webpki-roots-no-provider",
] }
tracing = "0.1.41"
parity-scale-codec = "3.7.5"
num-bigint = "0.4.6"
webpki = { package = "rustls-webpki", version = "0.103.8" }
time = "0.3.47"
once_cell = "1.21.3"

# Used for azure vTPM attestation support
az-tdx-vtpm = { version = "0.7.4", optional = true }
tss-esapi = { version = "7.6.0", optional = true }
openssl = { version = "0.10.75", optional = true }

# Used by test helpers
tdx-quote = { version = "0.0.5", features = ["mock"], optional = true }

# Direct rustls dep — only pulled in by the optional `rustls-exporter` feature
# below. The crate otherwise reaches rustls through tokio-rustls' re-export.
rustls = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tdx-quote = { version = "0.0.5", features = ["mock"] }
tokio-rustls = { workspace = true, default-features = true }
serde-saphyr = "0.0.22"
rcgen = "0.14.7"

[features]
default = []

# Adds support for Microsoft Azure attestation generation and verification
azure = ["tss-esapi", "az-tdx-vtpm", "openssl"]

# Allows mock quotes used in tests and exposes related functions for testing
mock = ["tdx-quote"]

# Exposes a rustls-backed `SessionExporter` implementation so callers can
# bind attestation `user_report_data` to a live TLS session's RFC 5705
# exporter output. Off by default to keep `attestation` usable by consumers
# that don't ship rustls directly.
rustls-exporter = ["rustls"]

# Enables local detection and generation of SGX (Gramine / DCAP) quotes via
# /dev/attestation/*. Off by default — consumers that only need to verify
# incoming SGX quotes (via MultiMeasurements::from_dcap_qvl_quote) do not
# need this feature. Required only on hosts that produce their own SGX
# quotes under Gramine. Effective only on Linux; the underlying file
# interface does not exist on other OSes.
sgx = []

# Chains to `dcap-qvl/danger-allow-tcb-override`, exposing the upstream
# `dangerous_verify_with_tcb_override(..., |tcb_info| tcb_info)` entry point.
# Enabling this feature makes `override_azure_outdated_tcb = true` on
# `verify_dcap_attestation_with_given_timestamp` invoke that entry point
# with a pass-through closure — no TCB levels are actually downgraded
# today; callers who want a real Azure TCB-downgrade policy should treat
# this as a seam and supply their own closure-based variant (future work).
azure-tcb-override = ["dcap-qvl/danger-allow-tcb-override"]

[lints]
workspace = true
