[package]
name = "attestation"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Attestation generation and verification, and measurement policy handling"
repository = "https://github.com/flashbots/attested-tls"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
dcap-qvl = { workspace = true, features = ["danger-allow-tcb-override"] }
pccs = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-rustls = { workspace = true, default-features = false }

anyhow = "1.0.100"
base64 = "0.22.1"
configfs-tsm = "0.0.2"
hex = "0.4.3"
http = "1.3.1"
num-bigint = "0.4.6"
once_cell = "1.21.3"
parity-scale-codec = "3.7.5"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.23", default-features = false, features = [ "rustls-tls-webpki-roots-no-provider" ] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.47"
tracing = "0.1.41"
ureq = "2.12.1"
webpki = { package = "rustls-webpki", version = "0.103.8" }
x509-parser = "0.18.0"

# Used for azure vTPM attestation support
az-tdx-vtpm = { version = "0.7.4", optional = true }
tss-esapi = { version = "7.6.0", optional = true }
openssl = { version = "0.10.78", optional = true }

# Used by test helpers
tdx-quote = { version = "0.0.5", features = ["mock"], optional = true }

[dev-dependencies]
tokio-rustls = { workspace = true, default-features = true }

serde-saphyr = "0.0.22"
tdx-quote = { version = "0.0.5", features = ["mock"] }
tempfile = "3.23.0"

[features]
default = []

# Adds support for Microsoft Azure attestation generation and verification
azure = ["tss-esapi", "az-tdx-vtpm", "openssl"]

# Allows mock quotes used in tests and exposes related functions for testing
mock = ["tdx-quote"]

[lints]
workspace = true
