[package]
name = "attested-tls"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { workspace = true }
rustls = { workspace = true, default-features = false }
attestation = { workspace = true }
rcgen = "0.14.7"
thiserror = "2.0.17"
ra-tls = { git = "https://github.com/Dstack-TEE/dstack.git", rev = "4f602dddc0542cd34da031c90ac0b3a560f316ed", features = ["quote"] }
anyhow = "1.0.102"
x509-parser = "0.18.1"
serde_json = "1.0.149"
yasna = "0.5.2"
sha2 = "0.10.9"
tracing = "0.1.41"

[dev-dependencies]
attestation = { workspace = true, features = ["mock"] }
nested-tls = { path = "../nested-tls" }
rustls = { workspace = true, default-features = false, features = ["aws_lc_rs"] }

[lints]
workspace = true
