[package]
name = "mock-tdx"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
dcap-qvl = { workspace = true }
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
rcgen = { version = "0.14.7", features = ["pem", "crypto", "aws_lc_rs"] }
scale = { package = "parity-scale-codec", version = "3.7.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde-saphyr = "0.0.22"
sha2 = "0.10.9"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { workspace = true, features = ["rt", "net"] }
urlencoding = "2.1.3"
yasna = "0.5.2"
x509-parser = "0.18.1"

[lints]
workspace = true
