[package]
name = "pccs"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Provisioning Certificate Caching Service with pre-emptive fetching"
repository = "https://github.com/flashbots/attested-tls"

[dependencies]
tokio = { workspace = true }
time = { version = "0.3.44", features = ["parsing", "formatting"] }
dcap-qvl = { workspace = true }
tracing = "0.1.41"
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.145"
hex = "0.4.3"
anyhow = "1.0.100"
reqwest = { workspace = true }
x509-parser = "0.18.0"
ureq = "2.12.1"
futures-executor = "0.3.31"

[dev-dependencies]
rcgen = "0.14.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
serde-saphyr = "0.0.22"
mock-tdx = { workspace = true }
